syntax = "proto3";
package customerApi;
option go_package = "gitlab.lrz.de/vss/semester/ob-23ss/blatt-2/blatt2-grp06/microservices/api/customerApi";

import "microservices/api/types/types.proto";

message AddCustomerRequest {
    types.Customer customer = 1;
}

message AddCustomerReply {
    uint32 customerId = 1;
}

message GetCustomerRequest {
    uint32 customerId = 1;
}

message GetCustomerReply {
    types.Customer customer = 1;
}

message RemoveCustomerRequest {
    uint32 customerId = 1;
}

message RemoveCustomerReply {
    types.Customer customer = 1;
}
