syntax = "proto3";
package stockApi;
option go_package = "gitlab.lrz.de/vss/semester/ob-23ss/blatt-2/blatt2-grp06/microservices/api/stockApi";

import "microservices/api/types/types.proto";

message AddProductsRequest {
    repeated types.Product products = 1;
}

message AddProductsReply {
    repeated uint32 productIds = 1;
}

message GetProductsRequest {
    repeated uint32 productIds = 1;
}

message GetProductsReply {
    repeated types.Product products = 1;
}

message RemoveProductRequest {
    uint32 productId = 1;
}

message RemoveProductReply {
    types.Product product = 1;
}

message OrderProductsRequest {
    uint32 orderId = 1;
    map<uint32, uint32> products = 2;
}

message OrderProductsReply {
    bool received = 1;
}

message DecreaseProductRequest {
    uint32 productId = 1;
    uint32 amount = 2;
}

message DecreaseProductReply {
    types.Product product = 1;
}

